--- a/rmd/1_1_backlink data cleaning.Rmd
+++ b/rmd/1_1_backlink data cleaning.Rmd
@@ -50,7 +50,7 @@ urls_for_backlinks <- urls_for_backlinks %>%
   filter(!str_detect(clean_domain_names, "google")) 
 
 #save file in proc_data
-write_csv(urls_for_backlinks, here("proc_data", "1_1_urls_for_backlinks_clean_domain_names.csv"))
+#write_csv(urls_for_backlinks, here("proc_data", "1_1_urls_for_backlinks_clean_domain_names.csv"))
 
 
 ```
@@ -60,13 +60,49 @@ write_csv(urls_for_backlinks, here("proc_data", "1_1_urls_for_backlinks_clean_do
 #save file in proc data unique domains and give VA to plug into ahrefs
 n_distinct(urls_for_backlinks$clean_domain_names)
 
-unique_urls <- urls_for_backlinks %>% distinct(urls_for_backlinks$clean_domain_names) 
+unique_urls <- urls_for_backlinks %>% distinct(urls_for_backlinks$clean_domain_names) %>% 
+   rename(website = `urls_for_backlinks$clean_domain_names`)
 
-write_csv(unique_urls, here("proc_data", "1_1_unique_urls_for_VA.csv"))
+#write_csv(unique_urls, here("proc_data", "1_1_unique_urls_for_VA.csv"))
 ```
 
 
 ```{r}
+library(googlesheets4)
+
+urls_with_ahrefs_data <- read_sheet("https://docs.google.com/spreadsheets/d/1DWBncf6HfgptVtVHV_Mu9vgJI17-MpFNdzVxXmNnqPs/edit#gid=596870066", sheet = "backlink_data")
+
+
+# check which domains to remove
+final_websites_with_backlinks %>% count(domain_rating) 
+final_websites_with_backlinks %>% count(ref_domains_dofollow) %>% View() 
+
+#business.site websites
+
+final_websites_with_backlinks %>% filter(str_detect(clean_domain_names, "business.site")) %>% 
+  slice_sample(n = 5) %>% 
+  select(clean_domain_names, domain_rating, ref_domains_total, ref_domains_dofollow) %>% View()
+# [1] 360
+
+# websites to filter out
+strings_websites_to_remove <- final_websites_with_backlinks %>% 
+  filter(final_websites_with_backlinks$domain_rating > 85) %>%
+  select(clean_domain_names, website) %>%
+  filter(str_detect(clean_domain_names, "business.site")) %>% #keep business.site websites
+  count(clean_domain_names, sort = T) %>% 
+  select(clean_domain_names) %>% 
+  unlist()
+
+strings_websites_to_remove  
+
+#merge backlink data with urls (not unique urls!)
+final_websites_with_backlinks <- urls_for_backlinks %>% 
+    left_join(urls_with_ahrefs_data, by = c("clean_domain_names" = "Target")) %>%
+  clean_names() %>% 
+  rename(ref_domains_total = domains) %>% 
+  filter(!str_detect(clean_domain_names, paste(strings_websites_to_remove, collapse = "|")))   # remove domains with high DR
+
+
 
 ```
 
