--- a/rmd/3_final.Rmd
+++ b/rmd/3_final.Rmd
@@ -1,4 +1,43 @@
 ---
-title: "3_final"
+title: "Google My Business Ranking Study for Personal Injury Lawyers"
 output: html_document
 ---
+
+<style>
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+  background-color: #00d188;
+  border-color: #00d188;
+}
+
+body {
+  font-family: montserrat;
+  color: #444444;
+  font-size: 14px;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 28px;
+}
+
+h1.title {
+  font-size: 30px;
+  color: #00d188;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
+}
+</style>
+
+# 1. Introduction
+
+
+
+# 2. Methodology
+
+
